--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   background-size: cover;
   background-position: 50% var(--focusY, 30%); /* 👈 push image down a bit */
   border-bottom:1px solid #eef2f7;
+  overflow:hidden;    
 }
 
     .student-ribbon{
@@ -774,8 +775,9 @@
           <!-- Card 1 -->
           <!-- Card 1 -->
    <article class="student-card">
-  <div class="student-photo" style="--focusY:22%; background-image:url('stu11.png');"></div>
-  <div class="student-ribbon">
+  <div class="student-photo" style="--focusY:22%; background-image:url('stu11.png');">
+    <div class="student-ribbon">
+    </div>
   </div>
   <div class="student-body">
     <div class="student-name">Sri Charan</div>
@@ -786,27 +788,29 @@
 
 
 <article class="student-card">
-  <div class="student-photo" style="--focusY:24%; background-image:url('stu22.png');"></div>
-  <div class="student-ribbon">
-    <div class="student-score">NIT Delhi Admit</div>
+  <div class="student-photo" style="--focusY:24%; background-image:url('stu22.png');">
+    <div class="student-ribbon">
+      <div class="student-score">NIT Delhi Admit</div>
+    </div>
   </div>
   <div class="student-body">
     <div class="student-name">Yashwitha</div>
-    <div class="student-univ">IIT Delhi</div>
+    <div class="student-univ">NIT Delhi</div>
     <div class="student-quote">“Daily reviews → strong consistency. Doubt support + sprint drills fixed accuracy.”</div>
   </div>
 </article>
 
-
 <article class="student-card">
   <div class="student-photo" style="--focusY:20%; background-image:url('stu33.png');"></div>
-  <div class="student-ribbon"></div>
   <div class="student-body">
     <div class="student-name">Arjun Sharma</div>
     <div class="student-univ">IIT Madras</div>
     <div class="student-quote">“Sprint drills + precise feedback → 52% to 94%. Course corrections every 2 weeks.”</div>
   </div>
 </article>
+
+
+
 
 
         </div>
@@ -1213,7 +1217,7 @@ If we miss a promise, <span class="hl-yellow">you don’t pay for it.</span>
       <h2>Your Child’s IIT Dream Starts Now</h2>
       <p class="lead">Join the exclusive cohort of 50 students who get personal mentorship from IIT/NIT toppers.</p>
       <div class="cta-wrap">
-        <a class="cta-btn" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener">📋 Book Free Assessment</a>
+        <a class="cta-btn" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener">📋 Book Your Child  Free Assessment Now</a>
       </div>
       <p class="about">Helping students crack IIT JEE examinations and secure admissions into premier IITs and NITs since 2017.</p>
     </div>
