--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@ If we miss a promise, <span class="hl-yellow">you don’t pay for it.</span>
 
   <section id="deadline" class="final-dark">
     <div class="final-wrap">
-      <div class="dead-top"><span>⚡</span><span>Limited seats left for <b id="batchLabel">September</b> batch</span></div>
+      <div class="dead-top"><span>⚡</span><span>Limited 1-1 seats (7/30) for <b id="batchLabel"> October </b> batch</span></div>
       <div class="dead-timer" id="timerBig">00:00:00</div>
       <div class="dead-sub" id="deadlineSub">Applications close in <b id="daysLeft">2</b> days</div>
     </div>
