--- a/index.html
+++ b/index.html
@@ -1238,6 +1238,54 @@ If we miss a promise, <span class="hl-yellow">you don’t pay for it.</span>
         <a class="cta-btn" href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment" target="_blank" rel="noopener">📋 Book Your Child  Free Assessment Now</a>
       </div>
       <p class="about">Helping students crack IIT JEE examinations and secure admissions into premier IITs and NITs since 2017.</p>
+      <!-- FAQs -->
+<section id="faqs" class="faqs final-dark" style="padding:26px 0 8px">
+  <div class="final-wrap">
+    <h2 class="section-title" style="margin-bottom:10px">Frequently Asked Questions</h2>
+
+    <div class="accordion">
+      <div class="acc-h"><span>1. Is the free assessment an exam?</span><span class="toggle">⌄</span></div>
+      <div class="acc-b">
+        <p>No — it’s not a test. Our IIT mentor personally interacts with your child, teaches a small topic, and asks conceptual &amp; numerical questions to understand their strengths, gaps, and learning style.</p>
+      </div>
+    </div>
+
+    <div class="accordion">
+      <div class="acc-h"><span>2. Who are the mentors at iiTuitions?</span><span class="toggle">⌄</span></div>
+      <div class="acc-b">
+        <p>Only IIT/NIT alumni and senior faculty with 8–12 years of experience teach here. No junior or part-time teachers.</p>
+      </div>
+    </div>
+
+    <div class="accordion">
+      <div class="acc-h"><span>3. How are classes conducted?</span><span class="toggle">⌄</span></div>
+      <div class="acc-b">
+        <p>Every session is 1-on-1 — just your child and the mentor. Sessions are online (Zoom/Meet) with both cameras on. You get daily WhatsApp updates and full transparency.</p>
+      </div>
+    </div>
+
+    <div class="accordion">
+      <div class="acc-h"><span>4. What if we’re not satisfied with the mentor?</span><span class="toggle">⌄</span></div>
+      <div class="acc-b">
+        <p>You can switch your faculty anytime. We also have a “Progress Guarantee” — if promised milestones aren’t met, you’re eligible for a full refund.</p>
+      </div>
+    </div>
+
+    <div class="accordion">
+      <div class="acc-h"><span>5. What kind of students benefit the most?</span><span class="toggle">⌄</span></div>
+      <div class="acc-b">
+        <p>Students in <b>Grade 11 &amp; 12</b> who are preparing for <b>IIT JEE Mains &amp; Advanced</b>, especially those who:</p>
+        <ul class="bullets" style="margin-top:6px">
+          <li>Struggle to clear doubts in large coaching batches</li>
+          <li>Feel underconfident before exams</li>
+          <li>Want personalized, IIT-level problem-solving support</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</section>
+
     </div>
   </section>
 
