--- a/index.html
+++ b/index.html
@@ -413,28 +413,46 @@
 .faqs .acc-b{ background:#fff; border:1px solid var(--ring); border-top:0; }
 .faqs .acc-b p, .faqs .acc-b li{ margin:8px 0; }
     /* FAQs: limit width, center the cards, and center the question text */
-.faqs .accordion{
-  max-width: 980px;          /* keep each card from stretching too long */
-  margin: 14px auto;         /* center horizontally + small gap between FAQs */
+/* FAQs: make each pill only as wide as its text, centered */
+#faqs .final-wrap{
+  display:flex;
+  flex-direction:column;
+  align-items:center;            /* center the pills */
 }
 
-/* center the question text (caret stays on the right) */
+.faqs .accordion{
+  display:inline-block;          /* shrink-to-fit the text */
+  width:auto;
+  max-width:96vw;                /* never overflow screen */
+  margin:14px 0;                 /* small gap between FAQs */
+  border-radius:14px;
+  overflow:hidden;
+}
+
+/* Center the question; keep caret on right without affecting width */
 .faqs .acc-h{
-  justify-content: center;
-  text-align: center;
-  position: relative;        /* for the caret positioning */
-  padding-right: 44px;       /* room for the caret */
+  justify-content:center;
+  text-align:center;
+  position:relative;
+  padding:16px 56px;             /* room for the caret */
 }
 .faqs .acc-h .toggle{
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);                 /* keep caret vertically centered */
-  transition: transform .2s ease;
+  position:absolute;
+  right:16px;
+  top:50%;
+  transform:translateY(-50%);
+  transition:transform .2s ease;
 }
 .faqs .accordion.open .acc-h .toggle{
-  transform: translateY(-50%) rotate(180deg);  /* rotate without jumping */
+  transform:translateY(-50%) rotate(180deg);
 }
+
+/* Keep questions in one line on wide screens so pill = text length */
+@media (min-width:768px){
+  .faqs .acc-h span:first-child{ white-space:nowrap; }
+}
+
+
 
     
     /* FAQs: make panel text black + add gap between items */
