--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
     <!-- Steps image instead of the 4 pills -->
     <div class="steps-banner">
-      <img src="sus.png" alt="Our 4 Steps Success Formula" loading="lazy">
+      <img src="s1.svg" alt="Our 4 Steps Success Formula" loading="lazy">
     </div>
   </div> <!-- closes .container -->
 
