--- a/index.html
+++ b/index.html
@@ -626,9 +626,14 @@
     <h2 class="section-title">Our 4 Steps Success Formula</h2>
 
     <!-- Steps image instead of the 4 pills -->
-    <div class="steps-banner">
-      <img src="s1.svg" alt="Our 4 Steps Success Formula" loading="lazy">
-    </div>
+    <!-- One-step-per-screen view (uses the same tall image 4 times, cropped) -->
+<div class="steps-slices">
+  <figure class="slice" style="--y:8%"><img src="s1.svg" alt="Step 1"></figure>
+  <figure class="slice" style="--y:34%"><img src="s1.svg" alt="Step 2"></figure>
+  <figure class="slice" style="--y:62%"><img src="s1.svg" alt="Step 3"></figure>
+  <figure class="slice" style="--y:88%"><img src="s1.svg" alt="Step 4"></figure>
+</div>
+
   </div> <!-- closes .container -->
 
 
