--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>IITuitions — Transform Your Child's IIT Dreams into Reality</title>
   <meta name="description" content="Personal mentorship from IIT/NIT alumni. Only 50 students chosen yearly for true individual attention. Book a free assessment on WhatsApp.">
+  <!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id=GTM-KT9FBNXL'+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KT9FBNXL');
+</script>
+<!-- End Google Tag Manager -->
+
   <style>
     :root{
       --primary:#000; --primary-2:#1a1a1a;
@@ -573,6 +583,13 @@
 
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KT9FBNXL"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
   <!-- Header -->
   <header class="site-header">
     <div class="container header-row">
